# halo2-prover

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  wrangler.toml
circuits/: Cargo.toml
circuits/src/: arithmetic_circuit.rs  collatz.rs  constants.rs  lib.rs  main.rs  poseidon.rs  poseidon_circuit.rs  unstringify.rs  utils.rs  wasm.rs
circuits/src/poseidon/: pow5.rs  primitives.rs
circuits/src/poseidon/primitives/: grain.rs  mds.rs  p128pow5t3.rs
client/: next.config.js  package-lock.json  package.json
client/.next/cache/webpack/client-development/: 0.pack  index.pack  index.pack.old
client/.next/cache/webpack/client-development-fallback/: 0.pack  index.pack
client/.next/cache/webpack/server-development/: 0.pack  index.pack  index.pack.old
client/src/app/: page.tsx
client/src/components/: HelloWorld.tsx
src/: arithmetic_circuit.rs  collatz.rs  collatz2.rs  lib.rs  main.rs  utils.rs
src/components/: Circuits.tsx  HelloWorld.tsx
src/lib/wasm/: halo2_prover.d.ts  halo2_prover.js  halo2_prover_bg.wasm  halo2_prover_bg.wasm.d.ts  package.json
src/pages/: index.tsx
worker/: index.js  package-lock.json  package.json
