[package]
name = "halo2-prover"
version = "0.1.0"
edition = "2021"
authors = ["Bhargav Annem <bhargav.annem@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8"
js-sys = "0.3"
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"

halo2_proofs = { git = "https://github.com/halo2-ce/halo2.git",  features = ["dev-graph"] }
# halo2_proofs = {version = "0.3.0",  features = ["dev-graph"] }
halo2wrong = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", default-features = false }
rayon = "1.5.1"
rand_core = { version = "0.6", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
plotters = "0.3.5"
num-bigint = "0.4.3"

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.3"
