[package]
name = "halo2-prover"
version = "0.1.0"
edition = "2021"
authors = ["Bhargav Annem <bhargav.annem@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "halo2_prover"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo = "0.8"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git",features = ["dev-graph"] }
plotters = "0.3.4"
rand_core = "0.6.4"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
console_error_panic_hook = "0.1.7"
base64 = "0.21.2"
